# orange-fastcoref-plugin

./: .gitignore  MANIFEST.in  pyproject.toml
orangecontrib/fastcoref/widgets/: coreference_resolution.py
tests/: storynavigator-testdata.tab  storynavigator-testdata_quotes.tab
